fix: ensure overflow is hidden for bar__left, bar__right, and bar__solo elements

--- a/src/components/slots/bar/bar.scss
+++ b/src/components/slots/bar/bar.scss
@@ -54,14 +54,17 @@
 
   &__left {
     flex: 1;
+    overflow: hidden;
   }
 
   &__right {
     flex: none;
+    overflow: hidden;
   }
 
   &__solo {
     flex: 1;
+    overflow: hidden;
   }
 
   &.bar--inverted {
